// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Activity component Webex Activity snapshots matches snapshot with "default" text 1`] = `
<div
  className="activity"
  key="default"
>
  <ActivityHeader
    created="2019-08-20T21:00:07.047Z"
    personID="default"
  />
  <div
    className="activity-content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </div>
</div>
`;

exports[`Webex Activity component Webex Activity snapshots matches snapshot with "long" text 1`] = `
<div
  className="activity"
  key="long"
>
  <ActivityHeader
    created="2019-08-20T21:00:07.047Z"
    personID="default"
  />
  <div
    className="activity-content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</div>
`;

exports[`Webex Activity component Webex Activity snapshots matches snapshot with a text from the same week 1`] = `
<div
  className="activity"
  key="sameWeek"
>
  <ActivityHeader
    created="sameWeek"
    personID="default"
  />
  <div
    className="activity-content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </div>
</div>
`;

exports[`Webex Activity component Webex Activity snapshots matches snapshot with a text from today 1`] = `
<div
  className="activity"
  key="today"
>
  <ActivityHeader
    created="today"
    personID="default"
  />
  <div
    className="activity-content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </div>
</div>
`;

exports[`Webex Activity component Webex Activity snapshots matches snapshot with a text from yesterday 1`] = `
<div
  className="activity"
  key="yesterday"
>
  <ActivityHeader
    created="yesterday"
    personID="default"
  />
  <div
    className="activity-content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </div>
</div>
`;

exports[`Webex Activity component Webex Activity snapshots matches snapshot with a text over a week ago 1`] = `
<div
  className="activity"
  key="old"
>
  <ActivityHeader
    created="old"
    personID="default"
  />
  <div
    className="activity-content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </div>
</div>
`;

exports[`Webex Activity component Webex Activity snapshots matches snapshot with an activity without header 1`] = `
<div
  className="activity"
  key="no-header"
>
  <div
    className="activity-content"
  >
    no header text
  </div>
</div>
`;
